# batch-document-cropper

./: .gitignore  README.md  build.spec  pyproject.toml  requirements.txt  run.py
.kiro/specs/batch-document-cropper/: design.md  requirements.md  tasks.md
.kiro/specs/docx-crop-consistency/: design.md  requirements.md  tasks.md
.kiro/specs/preview-button-loading/: design.md  requirements.md  tasks.md
src/: __init__.py  exceptions.py  main.py
src/core/: __init__.py  batch_processor.py  document_converter.py  docx_cropper.py  file_validator.py  output_manager.py  pdf_cropper.py  resolution_keeper.py
src/gui/: __init__.py  file_list_widget.py  main_window.py  margin_panel.py  preview_widget.py  progress_widget.py
src/models/: __init__.py  margin_settings.py  task.py
