[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-document-cropper"
version = "1.0.0"
description = "批量文档裁剪工具 - 支持 PDF, DOCX, DOC 格式"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
dependencies = [
    "PyQt5>=5.15.0",
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
cropper = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
